<resources>
    <string name="launch_tutorial">watch the youtube tutorial</string>
    <string name="launch_screenshots">Gallery Screenshots</string>
    <string name="launch_googleplus">Circle Me</string>
    <string name="launch_email">Contact me via eMail</string>
    <string name="launch_ratelink">Rate The Theme</string>
    <string name="launch_telegramgroup">Hit me up on telegram</string>
    <string name="launch_extra">Download Samsung-Theme</string>
    <string name="launch_intro">Play intro again</string>
    <string name="launch_close">Exit</string>
    <string name="launch_hide">Hide Launcher Icon</string>
    <string name="launch_substratum">Open substratum</string>
    <string name="substratumnull">Op</string>
    <string name="addon">get the Samsung addon</string>
    <string name="getsubs">get substratum theme engine</string>
    <string name="head">Header</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="support">Support</string>
    <string name="proceed">Continue</string>
    <string name="exit">Back</string>
    <string name="app_name">@string/ThemeName</string>
    <string name="launch_dialog_title">DEEP DARKNESS</string>
    <string name="launch_dialog_content">Hello chosen one, ready to enter the dark side?</string>
    <string name="launch_dialog_positive">OK</string>

    <string name="gay">gay</string> 
	<string name="bgtint">bgtint</string> 
	
	<string name="home">home</string>
    <string name="search">how-to</string>
    <string name="favorite">misc.</string>
</resources>