<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".SubstratumLauncher">

	<TextView
		android:id="@+id/title"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="#00000000"
		android:gravity="center_vertical|center_horizontal"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"
		android:text="@string/launch_dialog_title"
		android:textColor="#00000000"
		android:textSize="22sp"/>

	<RelativeLayout
		android:id="@+id/body"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/title"
		android:layout_alignParentStart="true"
		android:background="#00000000"
		android:paddingBottom="35dp">

		<Button
			android:id="@+id/textContinue"
			android:layout_width="160dp"
			android:layout_height="34dp"
			android:layout_alignParentBottom="true"
			android:layout_alignParentEnd="true"
			android:layout_marginStart="74dp"
			android:paddingStart="4dp"
			android:layout_marginEnd="5dp"
			android:layout_marginBottom="32dp"
			android:background="#00000000"
			android:gravity="start"
			android:text="@string/proceed"
			android:textColor="@android:color/white"
			android:textAppearance="@style/TextAppearance.AppCompat.Body2"
			android:textSize="24sp"
			android:textStyle="bold" />


	<ImageButton
		android:id="@+id/ic_continue"
		android:layout_width="48dp"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/textContinue"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="108dp"
		android:layout_marginBottom="30dp"
		android:background="@android:color/transparent"
		app:srcCompat="@drawable/ic_continue"/>


		<TextView
			android:id="@+id/dialog_content"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentTop="true"
			android:layout_marginStart="0dp"
			android:layout_marginTop="20dp"
			android:background="#00000000"
			android:gravity="center"
			android:paddingStart="0dp"
			android:text="@string/launch_dialog_content"
			android:textAlignment="center"
			android:textColor="#fff"
			android:textSize="15sp" />


		<CheckBox
			android:id="@+id/textExit"
			android:layout_width="150dp"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_alignParentBottom="true"
			android:layout_marginStart="50dp"
			android:layout_marginBottom="32dp"
			android:background="#00000000"
			android:button="@drawable/btn_check_off"
			android:paddingStart="6dp"
			android:paddingEnd="18dp"
			android:text="@string/exit"
			android:textAppearance="@style/TextAppearance.AppCompat.Small"
			android:textColor="@color/buttonFocused"
			android:theme="@android:style/Widget.CompoundButton.CheckBox"
			android:textSize="19sp"/>



		<TextView
			android:id="@+id/textView2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentBottom="true"
			android:layout_marginEnd="24dp"
			android:layout_marginBottom="0dp"
			android:textSize="9sp"
			android:textColor="@color/buttonFocused"
			android:text="@string/app_version" />

	</RelativeLayout>

	<com.airbnb.lottie.LottieAnimationView
		android:id="@+id/animation_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		app:lottie_rawRes="@raw/data"
		android:scaleType="centerCrop"
		app:lottie_loop="true"
		app:lottie_autoPlay="true" />
</RelativeLayout>