<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:n1="http://schemas.android.com/apk/res/android"
    xmlns:xmlstools="http://schemas.android.com/tools"
    n1:layout_width="fill_parent"
    n1:layout_height="fill_parent"
    n1:background="@color/transparent"
    n1:theme="@style/AppTheme.NoActionBar"
    xmlstools:actionBarNavMode="standard"
    xmlstools:context="com.moelle.deepdarkness.FirstActivity"
    xmlstools:showIn="@layout/home_fragment">

    <RelativeLayout xmlns:n3="http://schemas.android.com/apk/res-auto"
        style="@android:style/Theme.Black.NoTitleBar"
        n1:layout_width="0.0dip"
        n1:layout_height="0.0dip"
        n1:layout_marginTop="50.0dip"
        n1:layout_marginBottom="20dp"
        n1:gravity="center"
        n3:layout_constraintBottom_toBottomOf="parent"
        n3:layout_constraintHorizontal_bias="1.0"
        n3:layout_constraintLeft_toLeftOf="parent"
        n3:layout_constraintRight_toRightOf="parent"
        n3:layout_constraintTop_toTopOf="parent"
        n3:layout_constraintVertical_bias="1.0">

        <TextView
            n1:id="@+id/Substratum"
            n1:layout_width="300dp"
            n1:layout_height="wrap_content"
            n1:layout_marginLeft="0dp"
            n1:layout_marginRight="0dp"
            n1:background="?android:selectableItemBackground"
            n1:drawableStart="@drawable/ic_subsstratum"
            n1:drawablePadding="36.0dip"
            n1:fontFamily="@font/samsungone800"
            n1:gravity="start"
            n1:inputType="none"
            n1:onClick="substratum"
            n1:text="@string/launch_substratum"
            n1:textAppearance="@style/TextAppearance.AppCompat.Body2"
            n1:textSize="20sp"
            n1:textStyle="bold"
            n1:typeface="sans" />

        <TextView
            n1:id="@+id/Substratumnull"
            n1:layout_width="300dp"
            n1:layout_height="wrap_content"
            n1:layout_alignStart="@+id/Substratum"
            n1:layout_marginLeft="0dp"
            n1:layout_marginRight="0dp"
            n1:background="?android:selectableItemBackground"
            n1:drawableStart="@drawable/ic_subsstratum"
            n1:drawablePadding="0.0dip"
            n1:fontFamily="@font/samsungone800"
            n1:gravity="start"
            n1:inputType="none"
            n1:textAppearance="@style/TextAppearance.AppCompat.Body2"
            n1:textColor="@color/transparent"
            n1:textSize="20sp"
            n1:textStyle="bold"
            n1:typeface="sans" />

        <TextView
            n1:id="@+id/telegram"
            n1:layout_width="300dp"
            n1:layout_height="wrap_content"
            n1:layout_below="@+id/Substratum"
            n1:layout_alignStart="@+id/Substratum"
            n1:layout_marginLeft="0dp"
            n1:layout_marginTop="30dp"
            n1:layout_marginRight="0dp"
            n1:background="?android:selectableItemBackground"
            n1:drawableStart="@drawable/ic_telegram"
            n1:drawablePadding="36.0dip"
            n1:fontFamily="@font/samsungone800"
            n1:gravity="start"
            n1:inputType="none"
            n1:onClick="launchTelegramLink"
            n1:text="@string/launch_telegramgroup"
            n1:textAppearance="@style/TextAppearance.AppCompat.Body2"
            n1:textSize="20sp"
            n1:textStyle="bold"
            n1:typeface="sans" />

        <TextView
            n1:id="@+id/email"
            n1:layout_width="300dp"
            n1:layout_height="wrap_content"
            n1:layout_below="@+id/telegram"
            n1:layout_alignStart="@+id/Substratum"
            n1:layout_marginLeft="0dp"
            n1:layout_marginTop="30dp"
            n1:layout_marginRight="0dp"
            n1:background="?android:selectableItemBackground"
            n1:drawableStart="@drawable/ic_contact"
            n1:drawablePadding="36.0dip"
            n1:fontFamily="@font/samsungone800"
            n1:gravity="start"
            n1:inputType="none"
            n1:onClick="launchEmail"
            n1:text="@string/launch_email"
            n1:textAppearance="@style/TextAppearance.AppCompat.Body2"
            n1:textSize="20sp"
            n1:textStyle="bold"
            n1:typeface="sans" />

        <TextView
            n1:id="@+id/rate_button"
            n1:layout_width="300dp"
            n1:layout_height="wrap_content"
            n1:layout_below="@+id/email"
            n1:layout_alignStart="@+id/Substratum"
            n1:layout_marginLeft="0dp"
            n1:layout_marginTop="30dp"
            n1:layout_marginRight="0dp"
            n1:background="?android:selectableItemBackground"
            n1:drawableStart="@drawable/ic_rating"
            n1:drawablePadding="36.0dip"
            n1:fontFamily="@font/samsungone800"
            n1:gravity="start"
            n1:inputType="none"
            n1:onClick="launchRateLink"
            n1:text="@string/launch_ratelink"
            n1:textAppearance="@style/TextAppearance.AppCompat.Body2"
            n1:textSize="20sp"
            n1:textStyle="bold"
            n1:typeface="sans" />

        <TextView
            n1:id="@+id/btn_play_again"
            n1:layout_width="300dp"
            n1:layout_height="wrap_content"
            n1:layout_below="@+id/rate_button"
            n1:layout_alignStart="@+id/Substratum"
            n1:layout_marginLeft="0dp"
            n1:layout_marginTop="30dp"
            n1:layout_marginRight="0dp"
            n1:background="?android:selectableItemBackground"
            n1:drawableStart="@drawable/ic_replay"
            n1:drawablePadding="36.0dip"
            n1:fontFamily="@font/samsungone800"
            n1:gravity="start"
            n1:inputType="none"
            n1:onClick="ReplayIntro"
            n1:text="@string/launch_intro"
            n1:textAppearance="@style/TextAppearance.AppCompat.Body2"
            n1:textSize="20sp"
            n1:textStyle="bold"
            n1:typeface="sans" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>