<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_material"
    android:padding="8dp"
    tools:context=".SubstratumLauncher">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#00000000"
        android:gravity="center_vertical|center_horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/launch_dialog_title"
        android:textColor="#00000000"
        android:textSize="22sp"/>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="400dp"
        android:layout_height="312dip"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:background="#00000000"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:gravity="center"
            android:paddingStart="16dp"
            android:text="@string/launch_dialog_content"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="15sp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:lottie_fileName="data.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:paddingBottom="10dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/myCheckBox"
            android:layout_marginBottom="52dp"
            android:layout_marginStart="30dp"
            android:background="#00000000"
            android:contentDescription="@string/launch_dialog_title"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground"/>

        <CheckBox
            android:id="@+id/myCheckBox"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:background="#00000000"
            android:button="@drawable/btn_check_off"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/launch_hide"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/textColor"
            android:theme="@android:style/Widget.CompoundButton.CheckBox"
            android:textSize="12sp"/>


        <Button
            android:id="@+id/textContinue"
            android:layout_width="108dp"
            android:layout_height="30dp"
            android:layout_above="@+id/myCheckBox"
            android:layout_alignEnd="@+id/animation_view"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="-10dp"
            android:background="#00000000"
            android:gravity="start"
            android:text="@string/proceed"
            android:textColor="@android:color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/dashboard_list_title_size"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/ic_continue"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textContinue"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="32dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_continue"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="0dp"
            android:textSize="9sp"
            android:textColor="@color/buttonFocused"
            android:text="@string/app_version" />

    </RelativeLayout>


</RelativeLayout>