<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".FirstActivity">

    <android.support.constraint.ConstraintLayout xmlns:n1="http://schemas.android.com/apk/res/android"
        xmlns:xmlstools="http://schemas.android.com/tools"
        n1:id="@+id/bg"
        n1:layout_width="fill_parent"
        n1:layout_height="fill_parent"
        n1:layout_centerHorizontal="true"
        n1:layout_centerInParent="true"
        n1:layout_centerVertical="true"
        n1:background="@drawable/background_activity"
        n1:visibility="invisible"
        xmlstools:context=".NextActivity">


        <RelativeLayout xmlns:n3="http://schemas.android.com/apk/res-auto"
            n1:layout_width="wrap_content"
            n1:layout_height="match_parent"
            n1:gravity="center"
            n1:visibility="visible"
            n3:layout_constraintHorizontal_bias="1.0"
            n3:layout_constraintLeft_toLeftOf="parent"
            n3:layout_constraintRight_toRightOf="parent"
            n3:layout_constraintTop_toTopOf="parent">

            <ImageView
                n1:id="@+id/howtotitle"
                n1:layout_width="match_parent"
                n1:layout_height="wrap_content"
                n1:background="@drawable/howtozero"
                n1:cropToPadding="false"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                n1:id="@+id/head"
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_below="@+id/howtotitle"
                n1:layout_centerHorizontal="true"
                n1:adjustViewBounds="false"
                n1:background="@drawable/i"
                n1:baselineAlignBottom="false"
                n1:cropToPadding="false"
                n1:gravity="top"
                n1:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                n1:id="@+id/getsubstratum"
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_alignParentRight="false"
                n1:layout_alignStart="@+id/head"
                n1:layout_below="@+id/head"
                n1:layout_centerHorizontal="false"
                n1:layout_centerInParent="false"
                n1:layout_centerVertical="true"
                n1:layout_marginEnd="24dp"
                n1:layout_marginStart="32dp"
                n1:layout_marginTop="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                n1:background="?android:selectableItemBackground"
                n1:drawablePadding="26.0dip"
                n1:drawableStart="@drawable/ic_subs"
                n1:gravity="center"
                n1:inputType="none"
                n1:onClick="getsubstratum"
                n1:text="@string/getsubs"
                n1:textAppearance="@style/MyTitel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headzero" />

            <TextView
                n1:id="@+id/getaddon"
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_alignParentRight="false"
                n1:layout_alignStart="@+id/head"
                n1:layout_alignWithParentIfMissing="true"
                n1:layout_below="@+id/getsubstratum"
                n1:layout_centerHorizontal="false"
                n1:layout_centerInParent="false"
                n1:layout_centerVertical="true"
                n1:layout_marginEnd="24dp"
                n1:layout_marginStart="32dp"
                n1:layout_marginTop="24dp"
                android:textSize="18sp"
                android:textStyle="bold"
                n1:background="?android:selectableItemBackground"
                n1:drawablePadding="26.0dip"
                n1:drawableStart="@drawable/ic_subsaddon"
                n1:gravity="center"
                n1:inputType="none"
                n1:onClick="getaddon"
                n1:text="@string/addon"
                n1:textAppearance="@style/MyTitel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/getsubstratum" />

            <TextView
                n1:id="@+id/tutorial"
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_alignParentRight="false"
                n1:layout_alignStart="@+id/head"
                n1:layout_alignWithParentIfMissing="true"
                n1:layout_below="@+id/getaddon"
                n1:layout_centerHorizontal="false"
                n1:layout_centerVertical="true"
                n1:layout_marginEnd="24dp"
                n1:layout_marginStart="32dp"
                n1:layout_marginTop="34dp"
                android:textSize="16.5sp"
                android:textStyle="normal"
                n1:background="?android:selectableItemBackground"
                n1:drawablePadding="26.0dip"
                n1:drawableStart="@drawable/ic_youtubenull"
                n1:gravity="center"
                n1:inputType="none"
                n1:onClick="tutorial"
                n1:text="@string/launch_tutorial"
                n1:textAppearance="@style/MyLargeText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/getsubstratum" />

            <ImageView
                n1:id="@+id/youtube"
                n1:layout_width="wrap_content"
                n1:layout_height="wrap_content"
                n1:layout_alignParentRight="false"
                n1:layout_alignStart="@+id/head"
                n1:layout_alignWithParentIfMissing="true"
                n1:layout_below="@+id/getaddon"
                n1:layout_centerHorizontal="false"
                n1:layout_centerVertical="true"
                n1:layout_marginEnd="24dp"
                n1:layout_marginStart="32dp"
                n1:layout_marginTop="34dp"
                n1:background="?android:selectableItemBackground"
                n1:gravity="center"
                n1:inputType="none"
                n1:onClick="tutorial"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/getsubstratum" />

        </RelativeLayout>

        <RelativeLayout xmlns:n3="http://schemas.android.com/apk/res-auto"
            n1:layout_width="wrap_content"
            n1:layout_height="0dp"
            n1:layout_marginTop="0dp"
            n1:gravity="center"
            n1:visibility="visible"
            n3:layout_constraintHorizontal_bias="1.0"
            n3:layout_constraintLeft_toLeftOf="parent"
            n3:layout_constraintRight_toRightOf="parent"
            n3:layout_constraintTop_toTopOf="parent">

            <ImageView
                n1:id="@+id/howtotitlezero"
                n1:layout_width="match_parent"
                n1:layout_height="wrap_content"
                n1:layout_alignParentTop="true"
                n1:layout_marginTop="0dp"
                n1:background="@drawable/howto"
                app:layout_constraintTop_toTopOf="parent" />

            <com.klinker.android.simple_videoview.SimpleVideoView
                n1:id="@+id/video"
                n1:layout_width="match_parent"
                n1:layout_height="wrap_content"
                n1:layout_alignParentBottom="false"
                n1:layout_alignParentEnd="false"
                n1:layout_alignStart="@+id/howtotitlezero"
                n1:layout_alignWithParentIfMissing="false"
                n1:layout_below="@+id/howtotitlezero"
                n1:layout_centerInParent="true"
                n1:layout_centerVertical="true"
                n1:baselineAlignBottom="false"
                n1:cropToPadding="false"
                n1:gravity="center"
                n1:scaleType="center"
                app:layout_constraintTop_toTopOf="@id/howtotitlezero"
                app:loop="true"
                app:muted="false"
                app:showSpinner="true"
                app:stopSystemAudio="false" />


        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/next_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:backgroundTint="@color/orange_background_dark"
        android:transitionName="bg"
        app:srcCompat="@drawable/floating_action_button_icon_active" />
</android.support.design.widget.CoordinatorLayout>